# pqcd

./: .gitignore  LICENSE  README.md  compare_with_temperance.ipynb  compute_m_r_quantiles.py  compute_p_e_quantiles.py  compute_qcd_weights.py  constraint_plots.ipynb  constraints.py  download_gp_draws.ipynb  edit_collated_eos.ipynb  eos_marginalization.py  error_checking.ipynb  generate_eos.ipynb  get_Rmax.py  get_absolute_nterm.py  get_epsilon_p_at_n.py  get_qcd_prediction.ipynb  modified_eos_draws.ipynb  ntov_quantities.py  plot_lambda_vs_mass.ipynb  plot_low_likelihood_eos.ipynb  plot_mass_vs_radius.ipynb  plot_ntov_posterior.ipynb  plot_pressure_vs_density.ipynb  plot_pressure_vs_energy_density.ipynb  plot_pressure_vs_energy_density_at_ntov.ipynb  plot_qcd_likelihood.ipynb  plot_quantities_at_ntov.ipynb  plot_speed_of_sound_vs_density.ipynb  plot_utils.py  presentation_plots.ipynb  pressure_energy_density.ipynb  pressure_vs_energy_density.py  pyproject.toml  qcd_likelihood.py  qcd_weights.py  qcd_weights_Xmarg.py  qcd_weights_Xmarg_shared.py  qcd_weights_marg.py  (+5 more)
astro-inference/: README.md  get_eos_files.py  inspect_astro_posteriors.ipynb
astro_inference/: get_eos_files.py
data/: README.md  bps_eos.csv  intermediate_eos.csv  soft_eos.csv  stiff_eos.csv
make-agnostic-processes/: draw  integrate_had  integrate_hyp  integrate_qrk  make-agnostic-processes
make-agnostic-processes-tests/: make-agnostic-processes
manual_quantiles/: compare_with_temperance.ipynb  compute_m_r_quantiles.py  compute_p_e_quantiles.py
notebooks/: check_modified_eos_efficiency.ipynb  (+50 more)
(+175 files in other folders)
